# saddle-rendering-trail

./: .gitignore  Cargo.toml  README.md  __data.json  index.html
_app/: version.json
demo/basic/: index.html
demo/custom_material/: index.html
demo/drawing_trail/: index.html
demo/fade_modes/: index.html
demo/lab/: index.html
demo/magic_trail/: index.html
demo/melee_swipe/: index.html
demo/modifier/: index.html
demo/orientation_modes/: index.html
demo/projectile_contrail/: index.html
demo/space_modes/: index.html
demo/stress/: index.html
demo/weapon_trail/: index.html
demos/basic/: index.html
docs/: architecture.md  configuration.md
examples/: Cargo.toml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/common/: Cargo.toml
examples/common/src/: lib.rs
examples/custom_material/: Cargo.toml
examples/custom_material/src/: main.rs
examples/custom_material/src/shaders/: energy_trail.wgsl
examples/drawing_trail/: Cargo.toml
examples/drawing_trail/src/: main.rs
examples/fade_modes/: Cargo.toml
examples/fade_modes/src/: main.rs
examples/lab/: Cargo.toml  README.md
examples/lab/src/: e2e.rs  main.rs  scenarios.rs
examples/lab/src/scenarios/: support.rs
examples/magic_trail/: Cargo.toml
examples/magic_trail/src/: main.rs
examples/melee_swipe/: Cargo.toml
examples/melee_swipe/src/: main.rs
examples/modifier/: Cargo.toml
examples/modifier/src/: main.rs
examples/orientation_modes/: Cargo.toml
examples/orientation_modes/src/: main.rs
examples/projectile_contrail/: Cargo.toml
examples/projectile_contrail/src/: main.rs
examples/space_modes/: Cargo.toml
examples/space_modes/src/: main.rs
examples/stress/: Cargo.toml
examples/stress/src/: main.rs
examples/weapon_trail/: Cargo.toml
examples/weapon_trail/src/: main.rs
src/: components.rs  components_tests.rs  debug.rs  events.rs  lib.rs  mesh_builder.rs  mesh_builder_tests.rs  resources.rs  sampling.rs  sampling_tests.rs  systems.rs  systems_tests.rs
(+30 files in other folders)
