[package]
name = "saddle-rendering-trail"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/julien-blanchon/saddle-rendering-trail"
license = "MIT-0"
description = "Reusable ribbon and motion trail renderer for Bevy"

[dependencies]
bevy = { version = "0.18", features = ["serialize"] }

[workspace]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
